<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_toolbar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

<ImageView
android:layout_width="64dp"
android:layout_height="64dp"
android:contentDescription="@string/app_logo"
android:src="@drawable/ic_launcher_foreground"
app:tint="@color/white" />

<TextView
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
android:text="@string/admin_panel"
android:textAppearance="@style/TextAppearance.AppCompat.Body1"
android:textSize="18sp"
android:textStyle="bold"
android:textColor="@color/white" />

<TextView
android:id="@+id/tv_admin_email"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="4dp"
android:text="@string/admin_email"
android:textColor="@color/hint_color" />

    </LinearLayout>